fix: reduce header spacing

--- a/styles/ricardo_stylesheet.css
+++ b/styles/ricardo_stylesheet.css
@@ -9,8 +9,8 @@ h1, h2, h3, h4, h5, h6, body, p, div, table, th, td, thead, caption, article, fi
 /* Headings */
 h1, h2, h3, h4 {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif !important;
-    padding-top: 3pt;
-    padding-bottom: 3pt;
+    padding-top: 0pt;
+    padding-bottom: 1pt;
     text-align: left;
     color: #0070C0 !important;
 }
